--- a/styles/app.scss
+++ b/styles/app.scss
@@ -7,6 +7,7 @@ $lf-grey-dark: #8795a1;
 $lf-grey-darker: #606f7b;
 $lf-grey-darkest: #3d4852;
 $lf-black: #22292f;
+$lf-grey-lighter: #f1f5f8;
 
 body {
     font-family: "averta-regular", sans-serif;
